--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@types/koa__cors": "^3.0.1",
     "@types/node": "^13.7.4",
     "add": "^2.0.6",
+    "apollo-server": "^2.10.1",
+    "apollo-server-koa": "^2.10.1",
+    "graphql": "^14.6.0",
+    "graphql-tools": "^4.0.7",
     "http-errors": "^1.7.3",
     "ip": "^1.1.5",
     "koa": "^2.11.0",
@@ -26,6 +30,7 @@
     "koa-helmet": "^5.2.0",
     "koa-jwt": "^3.6.0",
     "koa-logger": "^3.2.1",
+    "koa-mount": "^4.0.0",
     "koa-router": "^8.0.8",
     "koa-static": "^5.0.0",
     "mongoose": "^5.9.2",
