--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "koa": "^2.11.0",
     "koa-better-body": "^3.3.4",
     "koa-body": "^4.1.1",
+    "koa-bodyparser": "^4.2.1",
     "koa-graphql": "^0.8.0",
     "koa-helmet": "^5.2.0",
     "koa-jwt": "^3.6.0",
