--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "add": "^2.0.6",
     "apollo-server": "^2.10.1",
     "apollo-server-koa": "^2.10.1",
+    "bcrypt": "^4.0.0",
     "graphql": "^14.6.0",
     "graphql-tools": "^4.0.7",
     "http-errors": "^1.7.3",
     "ip": "^1.1.5",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.11.0",
     "koa-better-body": "^3.3.4",
     "koa-body": "^4.1.1",
